removed former github key from package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://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@github.com/coded1guy/URL-Shortening-App.git"
+    "url": "git+https://github.com/coded1guy/URL-Shortening-App.git"
   },
   "keywords": [],
   "author": "",
