added vue configs to my starter files

--- a/package.json
+++ b/package.json
@@ -1,20 +1,42 @@
 {
   "name": "url-shortening-app",
   "version": "1.0.0",
+  "private": true,
   "description": "![Design preview for the Shortly URL shortening API coding challenge](./design/desktop-preview.jpg)",
-  "main": "index.js",
+  "author": "",
   "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/coded1guy/URL-Shortening-App.git"
+  "main": "index.js",
+  "dependencies": {
+    "core-js": "^3.8.3",
+    "vue": "^3.2.13"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "prettier": "^2.4.1"
+  },
+  "_id": "url-shortening-app@1.0.0",
   "bugs": {
     "url": "https://github.com/coded1guy/URL-Shortening-App/issues"
   },
-  "homepage": "https://github.com/coded1guy/URL-Shortening-App#readme"
+  "homepage": "https://github.com/coded1guy/URL-Shortening-App#readme",
+  "keywords": [],
+  "license": "ISC",
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/coded1guy/URL-Shortening-App.git"
+  }
 }
